@@ -4,6 +4,8 @@
 
 ### 3.6.2dev <- NOTE: the release version number will be 3.7.0 ###
 
+- Pan-Delay code added by Detlef Hennings, www.eclim.de,   2020-06
+
 - introduced new server lists: Any Genre 3, Choral/Barbershop (#875),
   also renamed Default to Any Genre 1, Any Genre to Any Genre 2,
   and Classical/Folk/Choral to Classical/Folk.
